sensord (0.6.42) unstable; urgency=low

  [Antti Virtanen]
  * Sensor graph shrinking not supported anymore to prevent race conditions between adaptor threads and qt mainloop. Fixes: NB#242237
  * Implemented downsample filter for XYZ data.
  * RotationFilter won't propagate data for compass input. Fixes: NB#242233.
  * TapAdaptor won't try to configure pollrate for accelerometer driver anymore. Fixes: NB#242902.
  * Fixes to compass declination correction handling (Fixes: NB#241539):
    - CompassSensorChannelInterface::setUseDeclination() enables it only locally.
    - CompassData includes both raw and corrected reading.
    - DeclinationFilter periodically reads value from GConf in case it gets changed. Interval is configurable. 
    - CompassSensorChannel now only listens "truenorth" output from CompassChain.
    - CompassSensorChannelAdaptor does not have options anymore to enable/disable declination correction globally.
    - DeclinationFilter can be forced to read and update declination value from gconf with declinationValue().
  * Improved FilterApiTests and MetadataTests.
  * Fixed regression from CalibrationHandler: calibration_rate config entry didn't have any effect.
  * Optimized InputDevAdaptor interval handling.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 05 Apr 2011 15:01:35 +0200

sensord (0.6.41) unstable; urgency=low

  [Timo Rongas]
  * Fixed library path for libdatatypes in core/core.pro

  [Lihan Guo]
  * Added qt-mobility support for tests/testapp.

  [Antti Virtanen]
  * Refactoring:
    - Removed unnecessary @todo comments.
    - AbstractChain is now able to take care of deleting added RingBuffers.
    - Removed unused SensorState concept.
    - Loader optimizations.
    - NodeBase bufferInterval and bufferSize handlers will try to locate source which supports buffering in case there a multiple sources.
    - Removed unused typeId() concept.